<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>stage</groupId>
	<artifactId>TransactionService</artifactId>
	<version>0.0.1</version>
	<name>TransactionService</name>
	<description>Transaction service for stage</description>
	<properties>
		<java.version>15</java.version>
	</properties>
	<dependencies>
		<dependency>
		    <groupId>com.squareup.okhttp3</groupId>
		    <artifactId>okhttp</artifactId>
		    <version>4.9.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.nfteam.nftlab</groupId>
			<artifactId>smart-contract-ethereum-web3j-integration</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<arguments>--enable-preview</arguments>
					<jvmArguments>--enable-preview</jvmArguments>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
	      <plugins>
	        <plugin>
	          <groupId>org.apache.maven.plugins</groupId>
	          <artifactId>maven-compiler-plugin</artifactId>
	          <version>3.8.1</version>
	          <configuration>
	            <source>16</source>
	            <target>16</target>
	            <release>16</release>
	            <compilerArgs>
	              <arg>--enable-preview</arg>
	            </compilerArgs>
	          </configuration>
	        </plugin>
	        <plugin>
	          <groupId>org.apache.maven.plugins</groupId>
	          <artifactId>maven-surefire-plugin</artifactId>
	          <version>3.0.0-M4</version>
	          <configuration>
	          <useSystemClassLoader>false</useSystemClassLoader>
	            <argLine>${surefireArgLine} --enable-preview -Xmx1024m -noverify</argLine>
	          </configuration>
	        </plugin>
	      </plugins>
    	</pluginManagement>
	</build>

</project>

